--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'MedievalSharp', cursive;
     background-color: #f5f5f5;
     background-image: url("../res/media/img/bg.jpg");
 }
@@ -34,6 +34,7 @@ header {
         border-radius: 5px;
         font-size: 16px;
         resize: none;
+        font-family: 'MedievalSharp', cursive;
     }
     button {
         width: 100%;
@@ -48,5 +49,6 @@ header {
         &:hover {
             background-color: #ccc;
         }
+        font-family: 'MedievalSharp', cursive;
     }
 }
